<resources>
    <string name="app_name">Mahak Order</string>
    <string name="str_moreThan">اطلاعات بیشتر</string>
    <string name="str_type_past_transfer">حواله</string>
    <string name="str_detail_transfer">جزئیات حواله</string>
    <string name="str_detail_return">جزئیات برگشت از فروش</string>
    <string name="str_detail_nonRegister">جزئیات عدم ثبت سفارش</string>
    <string name="str_Receive_detail_transfer">جزئیات حواله دریافتی</string>
    <string name="str_type_received_transfer">حواله دریافتی</string>
    <string name="str_detail_received_transfer">جزئیات حواله دریافتی</string>
    <string name="str_nav_transfer_list">لیست حواله های ارسالی</string>
    <string name="Received_transfer_list">لیست حواله های دریافتی</string>
    <string name="str_add_transfer">ثبت حواله</string>
    <string name="str_sum_of_Receive_transfer">دریافتی</string>
    <string name="str_sum_of_Send_transfer">ارسالی</string>
    <string name="str_nav_visitor_list">لیست ویزیتورها</string>
    <string name="TransferUpdate">ارسال تمام حواله ها</string>
    <string name="Print">پرینت لیست کالاها</string>
    <string name="ReportPrint">پرینت گزارش</string>
    <string name="ReportDate">تاریخ گزارش</string>
    <string name="GetAllTransfer">دریافت تمام حواله ها</string>
    <string name="str_visitor_list">دریافت لیست ویزیتورها</string>
    <string name="str_nav_receipt_list">لیست دریافتی ها</string>
    <string name="str_nav_payable_list">لیست پرداختی ها</string>
    <string name="str_nav_customer_list">لیست مشتریان</string>
    <string name="str_nav_delivery_list">لیست تحویلی ها</string>
    <string name="str_nav_promotion_list">لیست طرح های تشویقی</string>
    <string name="str_nav_Non_register">عدم ثبت سفارش</string>
    <string name="str_transfer_list">لیست حواله ها</string>
    <string name="str_register_payable">ثبت پرداختی</string>
    <string name="str_nav_contact">ارتباط با ما</string>
    <string name="str_nav_about">درباره نرم افزار</string>
    <string name="str_nav_data_sync">بروزرسانی اطلاعات</string>
    <string name="str_nav_report">گزارش گیری اطلاعات</string>
    <string name="str_nav_product_list">لیست کالاها</string>
    <string name="str_nav_open">لیست امکانات</string>
    <string name="str_nav_close">محک</string>
    <string name="str_nav_order_list">لیست پیش فاکتور ها</string>
    <string name="str_nav_invoice_list">لیست فاکتور ها</string>
    <string name="str_nav_returnOfSale_list">لیست برگشتی ها</string>
    <string name="str_nav_nonRegister_list">لیست عدم ثبت سفارش</string>
    <string name="_returnOfSale">برگشت از فروش</string>
    <string name="str_nav_version">نسخه</string>
    <string name="str_general_promo_spec">مشخصات</string>
    <string name="str_promo_terms">شرایط</string>
    <string name="str_promo_details">جزییات</string>
    <string name="str_invoice_spec">مشخصات فاکتور</string>
    <string name="str_order_spec">مشخصات پیش فاکتور</string>
    <string name="str_transfer_spec">مشخصات حواله</string>
    <string name="str_return_spec">مشخصات برگشتی</string>
    <string name="str_invoice_goods">اقلام فاکتور</string>
    <string name="str_order_goods">اقلام پیش فاکتور</string>
    <string name="str_transfer_goods">اقلام حواله</string>
    <string name="str_return_goods">اقلام برگشتی</string>
    <string name="str_invoice_promo">طرح های تشویقی</string>
    <string name="str_ctx_setting">تنظیمات</string>
    <string name="str_ctx_logout">خروج</string>
    <string name="str_ctx_update_app">بروزرسانی برنامه</string>
    <string name="str_ctx_last_changes">آخرین تغییرات</string>
    <string name="str_ctx_help">راهنما</string>
    <string name="str_login_to_system">ورود به سامانه</string>
    <string name="str_data_sync">بروزرسانی </string>
    <string name="str_contact_us">ارتباط با ما</string>
    <string name="str_customer_list">دریافت لیست مشتریان</string>
    <string name="str_product_list">دریافت لیست کالاها</string>
    <string name="str_get_config">دریافت تنظیمات</string>
    <string name="str_get_pictures_product">دریافت تصاویر کالاها</string>
    <string name="str_get_more_info">دریافت اطلاعات بیشتر</string>
    <string name="str_get_promotion">دریافت طرح های تشویقی</string>
    <string name="str_get_price_level">دریافت سطوح قیمتی</string>
    <string name="str_all_items">همه موارد</string>
    <string name="str_order_list"> ارسال پیش فاکتورها</string>
    <string name="str_invoice_list"> ارسال فاکتورها</string>
    <string name="str_receipt_list">ارسال دریافتی ها</string>
    <string name="str_returnOfSale_list">ارسال برگشتی ها</string>
    <string name="str_payable_list">ارسال پرداختی ها</string>
    <string name="str_done_check_list">ارسال جزییات ماموریت ها</string>
    <string name="str_none_register_list">ارسال عدم ثبت سفارش ها</string>
    <string name="str_send_customer_list">ارسال لیست مشتریان</string>
    <string name="str_product_images">تصاویر کالاها</string>
    <string name="str_activity_list">دریافت دستور کار</string>
    <string name="str_bill">دریافت گردش حساب</string>
    <string name="str_username_fa">نام کاربری</string>
    <string name="str_password_fa">کلمه عبور</string>
    <string name="str_mahak_id">شناسه محک</string>
    <string name="str_database_id">شماره بانک اطلاعاتی</string>
    <string name="str_username_en">UserName</string>
    <string name="str_password_en">Password</string>
    <string name="str_login">ورود به سیستم</string>
    <string name="str_forms_footer_mahak">Mahak Order App. All Right Reserved\nCopyright 2022 - Version</string>
    <string name="str_email">پست الکترونیک</string>
    <string name="str_body">متن پیام</string>
    <string name="str_message_content">متن پیام</string>
    <string name="str_name">نام</string>
    <string name="str_send">ارسال</string>
    <string name="str_sum_of_receipts"> دریافتی</string>
    <string name="str_sum_of_orders">پیش فاکتور</string>
    <string name="str_sum_of_invoices">فاکتور</string>
    <string name="str_sum_of_cash"> نقدی </string>
    <string name="str_add_new_order">ثبت پیش فاکتور</string>
    <string name="str_add_new_receipt">ثبت دریافتی</string>
    <string name="str_add_new_Payable">ثبت پرداختی</string>
    <string name="str_add_new_invoice">ثبت فاکتور</string>
    <string name="str_add_order">ثبت سفارش</string>
    <string name="str_add_pre_invoice">ثبت پیش فاکتور</string>
    <string name="str_add_transaction">گردش حساب</string>
    <string name="str_add_receipt">ثبت دریافتی</string>
    <string name="str_add_payable">ثبت پرداختی</string>
    <string name="str_title">عنوان پیام</string>
    <string name="str_support">پشتیبانی</string>
    <string name="str_delivery_order_list">لیست تحویلی ها</string>
    <string name="str_get_delivery_order_list">دریافت لیست تحویلی ها</string>
    <string name="str_cheque_amount"> چک</string>
    <string name="str_receipt_amount">حواله</string>
    <string name="str_sum_of_discount">تخفیف</string>
    <string name="str_sum_of_pure">خالص</string>
    <string name="str_total_amount">کل</string>
    <string name="str_total_amount_order">مبلغ کل بدون تخفیف و عوارض و مالیات</string>
    <string name="str_pure_with_charge_tax">مبلغ خالص با عوارض و مالیات</string>
    <string name="str_pure_without_charge_tax">مبلغ خالص بدون عوارض و مالیات</string>
    <string name="str_pure_with">مبلغ خالص با</string>
    <string name="str_pure_without">مبلغ خالص بدون</string>
    <string name="str_update">بروزرسانی در</string>
    <string name="str_checklist_visit">ویزیت</string>
    <string name="str_checklist_order">سفارش</string>
    <string name="str_checklist_delivery">تحویل</string>
    <string name="str_checklist_receipt">دریافت</string>
    <string name="str_add_invoice">ثبت فاکتور</string>
    <string name="str_sort">مرتب سازی</string>
    <string name="str_add_return">ثبت برگشتی</string>
    <string name="str_add_product">ثبت</string>
    <string name="str_add_non_register">ثبت عدم ثبت سفارش</string>
    <string name="str_select_invoice">انتخاب فاکتور</string>
    <string name="str_select_item">انتخاب آیتم</string>
    <string name="str_tracking_code">کد پیگیری </string>
    <string name="str_lastname_customer">نام خانوادگی </string>
    <string name="str_clear_data">حذف کل اطلاعات</string>
    <string name="str_logout">خروج از سیستم</string>
    <string name="str_save_receipt">ثبت دریافتی</string>
    <string name="str_save_non_register">ثبت عدم ثبت سفارش</string>
    <string name="str_save_cheque">ثبت چک یا حواله</string>
    <string name="str_save_payable">ثبت پرداختی</string>
    <string name="str_save_delivery">ثبت تحویلی</string>
    <string name="str_save_invoice">ثبت فاکتور</string>
    <string name="str_save_order_close">ثبت پیش فاکتور و بستن</string>
    <string name="str_save_invoice_close">ثبت فاکتور و بستن</string>
    <string name="str_save_Transference_close">ثبت حواله و بستن</string>
    <string name="str_add_return_close">ثبت برگشتی و بستن</string>
    <string name="str_save_order">ثبت پیش فاکتور</string>
    <string name="str_customer_detail">اطلاعات مشتری و فاکتور</string>
    <string name="str_cart_detail">جزییات کالا</string>
    <string name="str_detail_delivery">جزئیات تحویلی</string>
    <string name="str_detail_order">جزئیات پیش فاکتور</string>
    <string name="str_detail_invoice">جزئیات فاکتور</string>
    <string name="str_detail_customer">اطلاعات بیشتر مشتری</string>
    <string name="str_add_new_customer">ثبت اطلاعات مشتری مهمان</string>
    <string name="str_list_transaction">لیست گردش حساب</string>
    <string name="str_detail_checklist">جزئیات دستور کار</string>
    <string name="str_payment">مبلغ قابل پرداخت </string>
    <string name="str_tax">مالیات : </string>
    <string name="str_charge">عوارض : </string>
    <string name="str_charge_tax">عوارض و مالیات</string>
    <string name="str_remaining_invoice">مانده فاکتور</string>
    <string name="str_remaining_order">مانده پیش فاکتور</string>
    <string name="str_remaining_person">مانده حساب قبلی شخص</string>
    <string name="str_remaining_final_person">مانده نهایی شخص</string>
    <string name="str_customer_info">اطلاعات حساب</string>
    <string name="str_profile_detail">اطلاعات تماس</string>
    <string name="str_sign_activity">ثبت امضاء</string>
    <string name="str_add_new_Transference">ثبت حواله</string>
    <string name="str_save_Transference">ثبت حواله</string>
    <string name="str_setting">تنظیمات</string>
    <string name="str_share">اشتراک گذاری</string>
    <string name="str_cancel">انصراف</string>
    <string name="str_add_customer">اضافه کردن مشتری</string>
    <string name="str_delete">حذف</string>
    <string name="str_call">تلفن</string>
    <string name="str_sms">پیام کوتاه</string>
    <string name="str_transactionlog">گردش حساب</string>
    <string name="str_modeList">خطی</string>
    <string name="str_modeGrid">چندتایی</string>
    <string name="str_Barcode">بارکد خوان</string>
    <string name="str_modeLargeList">لیست بزرگ</string>
    <string name="str_add_Product">اضافه کردن محصولات</string>
    <string name="str_add_gift">افزودن کالای اشانتیون</string>
    <string name="str_edit">ویرایش</string>
    <string name="str_print">چاپ</string>
    <string name="str_backup">عملیات پشتیبان گیری و بازیابی</string>
    <string name="str_nav_reports_list">گزارشات</string>
    <string name="send_to_server">ارسال به سرور</string>
    <string name="delete_sign">حذف امضاء</string>
    <string name="print_A4">A4</string>
    <string name="recent_changes">تغییرات اخیر</string>
    <string name="print_customer_list">پرینت لیست مشتریان</string>
    <string name="refresh_customer_list">بروزرسانی لیست مشتریان</string>
    <string name="sort">مرتب سازی</string>
    <string name="signature">ثبت امضاء</string>
    <string name="sort_base">مرتب سازی بر اساس</string>
    <string name="code">کد</string>
    <string name="order">ترتیب</string>
    <string name="ascending">صعودی</string>
    <string name="descending">نزولی</string>
    <string name="execute">انجام</string>
    <string name="add_duplicate_product">افزودن کالای تکراری</string>
</resources>