<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuTransaction"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/str_transactionlog" />
    <item
        android:id="@+id/mnuCall"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/str_call" />
    <item
        android:id="@+id/mnuSms"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/str_sms" />
    <item
        android:id="@+id/mnuMoreInfo"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/str_detail_customer" />
    <item
        android:id="@+id/mnuEdit"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/str_edit" />
</menu>