<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_setting"
        app:showAsAction="never"
        android:title="@string/str_setting"
        android:orderInCategory="3" />

    <item
        android:id="@+id/delete_sign"
        app:showAsAction="never"
        android:title="@string/delete_sign"
        android:orderInCategory="4" />

    <item
        android:id="@+id/printa4"
        app:showAsAction="always"
        android:title="@string/print_A4"
        android:orderInCategory="4" />

    <item
        android:id="@+id/menu_sign"
        app:showAsAction="always"
        android:title="@string/signature"
        android:orderInCategory="1"
        android:icon="@drawable/ic_gesture_black_24dp" />


    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="always"
        android:title="@string/str_share"
        android:orderInCategory="2"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />


</menu>