<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuEdit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:name="@string/str_edit"
        android:title="@string/str_edit" />
    <item
        android:id="@+id/mnuDelete"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:name="@string/str_delete"
        android:title="@string/str_delete" />
    <item
        android:id="@+id/mnuPrint"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:name="@string/str_print"
        android:title="@string/str_print" />
    <item
        android:id="@+id/mnuSend"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:name="@string/send_to_server"
        android:title="@string/send_to_server" />
</menu>