<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mahak.order.ProductsListActivity">
    <item
        android:id="@+id/mnuBarcode"
        android:orderInCategory="1"
        android:icon="@drawable/ic_barcode_scan_white_48dp"
        android:name="@string/str_Barcode"
        app:showAsAction="never"
        android:title="@string/str_Barcode" />
    <item
        android:id="@+id/mnuAdd"
        android:orderInCategory="4"
        android:icon="@drawable/ic_add_inverse"
        android:name="@string/str_add_customer"
        app:showAsAction="always"
        android:title="@string/str_add_customer" />
    <item
        android:id="@+id/mnuPrint"
        android:orderInCategory="3"
        android:icon="@drawable/ic_print_white_48dp"
        android:name="@string/print_customer_list"
        app:showAsAction="never"
        android:title="@string/print_customer_list" />
    <item
        android:id="@+id/mnuRefresh"
        android:orderInCategory="3"
        android:icon="@drawable/ic_print_white_48dp"
        android:name="@string/refresh_customer_list"
        app:showAsAction="never"
        android:title="@string/refresh_customer_list" />
    <item
        android:id="@+id/mnuSort"
        android:orderInCategory="2"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always"
        android:title="@string/sort" />
</menu>
